// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sign and verify data #signDataWithPrivateKey should sign data 1`] = `
{
  "data": [
    44,
    123,
    78,
    103,
    191,
    106,
    112,
    48,
    222,
    154,
    116,
    84,
    229,
    225,
    107,
    141,
    35,
    220,
    238,
    31,
    94,
    164,
    184,
    184,
    129,
    200,
    158,
    197,
    131,
    77,
    83,
    74,
    254,
    61,
    121,
    26,
    178,
    228,
    93,
    243,
    49,
    214,
    68,
    147,
    83,
    124,
    229,
    116,
    72,
    2,
    93,
    9,
    207,
    219,
    163,
    155,
    167,
    237,
    238,
    213,
    5,
    239,
    182,
    2,
  ],
  "type": "Buffer",
}
`;

exports[`sign and verify message #signMessageWithPrivateKey should create a signed message using a private key and a custom tag 1`] = `
{
  "message": "Some default text.",
  "publicKey": {
    "data": [
      126,
      244,
      92,
      213,
      37,
      233,
      91,
      122,
      134,
      36,
      75,
      189,
      78,
      180,
      85,
      9,
      20,
      173,
      6,
      48,
      16,
      19,
      149,
      143,
      77,
      214,
      77,
      50,
      239,
      123,
      197,
      136,
    ],
    "type": "Buffer",
  },
  "signature": {
    "data": [
      220,
      232,
      66,
      79,
      58,
      61,
      32,
      33,
      68,
      205,
      48,
      69,
      187,
      16,
      109,
      51,
      51,
      4,
      219,
      6,
      15,
      121,
      185,
      237,
      76,
      174,
      166,
      16,
      1,
      180,
      5,
      134,
      120,
      202,
      106,
      143,
      59,
      225,
      118,
      144,
      64,
      59,
      230,
      97,
      239,
      50,
      182,
      101,
      205,
      62,
      29,
      213,
      74,
      31,
      176,
      70,
      88,
      231,
      219,
      75,
      50,
      123,
      207,
      11,
    ],
    "type": "Buffer",
  },
}
`;

exports[`sign and verify message #signMessageWithPrivateKey should create a signed message using a private key when message is in Buffer format 1`] = `
{
  "message": {
    "data": [
      83,
      111,
      109,
      101,
      32,
      100,
      101,
      102,
      97,
      117,
      108,
      116,
      32,
      116,
      101,
      120,
      116,
      46,
    ],
    "type": "Buffer",
  },
  "publicKey": {
    "data": [
      126,
      244,
      92,
      213,
      37,
      233,
      91,
      122,
      134,
      36,
      75,
      189,
      78,
      180,
      85,
      9,
      20,
      173,
      6,
      48,
      16,
      19,
      149,
      143,
      77,
      214,
      77,
      50,
      239,
      123,
      197,
      136,
    ],
    "type": "Buffer",
  },
  "signature": {
    "data": [
      220,
      232,
      66,
      79,
      58,
      61,
      32,
      33,
      68,
      205,
      48,
      69,
      187,
      16,
      109,
      51,
      51,
      4,
      219,
      6,
      15,
      121,
      185,
      237,
      76,
      174,
      166,
      16,
      1,
      180,
      5,
      134,
      120,
      202,
      106,
      143,
      59,
      225,
      118,
      144,
      64,
      59,
      230,
      97,
      239,
      50,
      182,
      101,
      205,
      62,
      29,
      213,
      74,
      31,
      176,
      70,
      88,
      231,
      219,
      75,
      50,
      123,
      207,
      11,
    ],
    "type": "Buffer",
  },
}
`;

exports[`sign and verify message #signMessageWithPrivateKey should create a signed message using a private key when message is in string format 1`] = `
{
  "message": "Some default text.",
  "publicKey": {
    "data": [
      126,
      244,
      92,
      213,
      37,
      233,
      91,
      122,
      134,
      36,
      75,
      189,
      78,
      180,
      85,
      9,
      20,
      173,
      6,
      48,
      16,
      19,
      149,
      143,
      77,
      214,
      77,
      50,
      239,
      123,
      197,
      136,
    ],
    "type": "Buffer",
  },
  "signature": {
    "data": [
      216,
      59,
      84,
      93,
      38,
      134,
      126,
      198,
      234,
      63,
      68,
      165,
      12,
      18,
      97,
      95,
      129,
      57,
      231,
      69,
      112,
      60,
      207,
      130,
      153,
      74,
      208,
      30,
      37,
      130,
      116,
      119,
      208,
      64,
      81,
      129,
      54,
      18,
      212,
      230,
      116,
      75,
      145,
      156,
      163,
      189,
      218,
      124,
      21,
      106,
      33,
      184,
      240,
      156,
      154,
      151,
      83,
      3,
      75,
      88,
      126,
      163,
      43,
      7,
    ],
    "type": "Buffer",
  },
}
`;
